[project]
name = "torrent-client"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "lyyyuna", email = "lyyyuna@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
